# dimensional-dk-vector-instances

./: LICENSE  README.md  dimensional-dk-vector-instances.cabal
Numeric/Units/Dimensional/DK/: Vector.hs
